# mymeet

.github/workflows/: build-android-app.yml  docker-publish.yml
android-app/: debug.keystore  local.properties  settings.gradle.kts
android-app/.github/workflows/: ci.yml
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/dev/fanchao/mymeet/: App.kt  CallSessionManager.kt  MainActivity.kt  PeerConnectionEventStream.kt  Preferences.kt  WebRtcUtil.kt  WebSocketStream.kt
android-app/app/src/main/java/dev/fanchao/mymeet/call/: CallSettings.kt
android-app/app/src/main/java/dev/fanchao/mymeet/ui/: CallScreen.kt  EditCallSettingsScreen.kt  EnterRoomScreen.kt  VideoTile.kt
android-app/app/src/main/java/dev/fanchao/mymeet/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: main.rs  proto.rs  room.rs  user.rs
backend/src/proto/: messages.proto
