[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["json", "ws"] }
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "macros", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[build-dependencies]
prost-build = "0.14.1"
